// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrapperComponent allows custom layouts 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <div
      class="combobox-wrapper"
    >
      <input
        aria-autocomplete="none"
        aria-controls="id_listbox"
        aria-expanded="false"
        class="combobox__input"
        id="id"
        role="combobox"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="clear-button-wrapper"
    >
      <span
        aria-hidden="true"
        class="combobox__clear-button"
        hidden=""
        id="id_clear_button"
      />
    </div>
    <div
      class="listbox-wrapper"
    >
      <ul
        class="combobox__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          class="combobox__option"
          id="id_option_foo"
          role="option"
          tabindex="-1"
        >
          foo
        </li>
      </ul>
    </div>
    <div
      class="not-found-wrapper"
    >
      <div
        aria-live="polite"
        class="combobox__not-found"
        hidden=""
        id="id_not_found"
        role="alert"
      />
    </div>
  </div>
</div>
`;

exports[`onSearch updating options updates the displayed options 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-expanded="true"
      class="combobox__input"
      id="id"
      role="combobox"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="combobox__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="combobox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
      <li
        class="combobox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        class="combobox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
    <div
      aria-live="polite"
      class="combobox__not-found"
      hidden=""
      id="id_not_found"
      role="alert"
    />
  </div>
</div>
`;

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-expanded="true"
      class="combobox__input"
      id="id"
      role="combobox"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="combobox__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="combobox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        class="combobox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
    <div
      aria-live="polite"
      class="combobox__not-found"
      hidden=""
      id="id_not_found"
      role="alert"
    />
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-expanded="false"
      class="combobox__input"
      id="id"
      role="combobox"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="combobox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-hidden="true"
        class="combobox__group"
      >
        Citrus
      </li>
      <li
        class="combobox__option combobox__option--grouped"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only"
        >
          Citrus
        </div>
        Orange
      </li>
      <li
        class="combobox__option combobox__option--grouped"
        id="id_option_lemon"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only"
        >
          Citrus
        </div>
        Lemon
      </li>
      <li
        aria-hidden="true"
        class="combobox__group"
      >
        Berry
      </li>
      <li
        class="combobox__option combobox__option--grouped"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only"
        >
          Berry
        </div>
        Raspberry
      </li>
      <li
        class="combobox__option combobox__option--grouped"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only"
        >
          Berry
        </div>
        Strawberry
      </li>
    </ul>
    <div
      aria-live="polite"
      class="combobox__not-found"
      hidden=""
      id="id_not_found"
      role="alert"
    />
  </div>
</div>
`;

exports[`options as array of objects label renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-expanded="false"
      class="combobox__input"
      id="id"
      role="combobox"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="combobox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="combobox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="combobox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
    <div
      aria-live="polite"
      class="combobox__not-found"
      hidden=""
      id="id_not_found"
      role="alert"
    />
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-expanded="false"
      class="combobox__input"
      id="id"
      role="combobox"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="combobox__option"
        id="id_option_1"
        role="option"
        tabindex="-1"
      >
        1
      </li>
      <li
        class="combobox__option"
        id="id_option_2"
        role="option"
        tabindex="-1"
      >
        2
      </li>
      <li
        class="combobox__option"
        id="id_option_3"
        role="option"
        tabindex="-1"
      >
        3
      </li>
    </ul>
    <div
      aria-live="polite"
      class="combobox__not-found"
      hidden=""
      id="id_not_found"
      role="alert"
    />
  </div>
</div>
`;

exports[`options options as array of strings renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-expanded="false"
      class="combobox__input"
      id="id"
      role="combobox"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="combobox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="combobox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="combobox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
    <div
      aria-live="polite"
      class="combobox__not-found"
      hidden=""
      id="id_not_found"
      role="alert"
    />
  </div>
</div>
`;

exports[`options options as null renders an option with an empty string 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-expanded="false"
      class="combobox__input"
      id="id"
      role="combobox"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="combobox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        
      </li>
      <li
        class="combobox__option"
        id="id_option_foo"
        role="option"
        tabindex="-1"
      >
        foo
      </li>
    </ul>
    <div
      aria-live="polite"
      class="combobox__not-found"
      hidden=""
      id="id_not_found"
      role="alert"
    />
  </div>
</div>
`;

exports[`options options as undefined renders an option with an empty string 1`] = `
<div>
  <div
    aria-busy="false"
    class="combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-expanded="false"
      class="combobox__input"
      id="id"
      role="combobox"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="combobox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        
      </li>
      <li
        class="combobox__option"
        id="id_option_foo"
        role="option"
        tabindex="-1"
      >
        foo
      </li>
    </ul>
    <div
      aria-live="polite"
      class="combobox__not-found"
      hidden=""
      id="id_not_found"
      role="alert"
    />
  </div>
</div>
`;
